<resources>
    <string name="app_name">Eround</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contextText">여기에 텍스트</string>
    <string name="backgroundimage">backGroundImage</string>
    <string name="contentattachment">contentAttachment</string>
    <string name="eround">EROUND</string>
    <string name="locationimage">LocationImage</string>
    <string name="commentLocaionText">여기위치</string>
    <string name="dotimage">dotImage</string>
    <string name="commentTimeText">여기시간</string>
    <string name="commentEmotionText">감정</string>
    <string name="favoriteNum">조와용</string>
    <string name="commentNum">왱알</string>
    <string name="hash_fragment">hash fragment</string>
    <string name="me">ME</string>
    <string name="headerContent_profileFragment">나를 알아가는 공간, 어라운드</string>
    <string name="headerCounter_profileFragment">0 months, 0 story</string>
    <string name="tabMyContent_profileFragment">이야기</string>
    <string name="tebMyTag_profileFragment">태그</string>
    <string name="tebMyComment_profileFragment">내 댓글</string>
    <string name="tebMyBookmark_profileFragment">북마크</string>
    <string name="headerStatus_profileFragment">통계</string>
    <string name="headerLikeButton_profileFragment">0</string>
    <string name="image_profilecontentfragment">image_profileContentFragment</string>
    <string name="content1_profileContentFragment">생각을 자유롭게 적어보세요</string>
    <string name="content2_profileContentFragment">작성된 이야기는 공개되기 전까지</string>
    <string name="content3_profileContentFragment">다른 사람들이 볼 수 없습니다.</string>
    <string name="content1_profileTagFragment">\'#해시태그\'를 써보세요.</string>
    <string name="content2_profileTagFragment">해시태그별로 쓴 이야기를</string>
    <string name="content3_profileTagFragment">볼 수 있습니다.</string>
    <string name="content1_profileBookmarkFragment">북마크를 해보세요.</string>
    <string name="content2_profileBookmarkFragment">이야기를 읽다가 오른쪽 상단의 메뉴를 누르면,</string>
    <string name="content3_profileBookmarkFragment">북마크 할 수 있어요.</string>
    <string name="content1_profileCommentFragment">댓글을 써보세요.</string>
    <string name="content2_profileCommentFragment">누군가의 이야기에 마음을 담은 댓글을 써보세요.</string>
    <string name="tagBackGround_hashFragment">tagBackGround_hashFragment</string>
    <string name="tag1Content1_hashFragment">#타이밍</string>
    <string name="tag1Content2_hashFragment">이야기 123</string>
    <string name="tag1Content3_hashFragment">구독자 234</string>
    <string name="tag2Content1_hashFragment">#예체능</string>
    <string name="tag2Content2_hashFragment">이야기 215</string>
    <string name="tag2Content3_hashFragment">구독자 785</string>
    <string name="tag3Content1_hashFragment">#너에게궁금한</string>
    <string name="tag3Content2_hashFragment">이야기 75</string>
    <string name="tag3Content3_hashFragment">구독자 12</string>
    <string name="headerSaveButton_writeFragment">저장</string>
    <string name="navigation_open">오픈</string>
    <string name="navigation_close">클로스</string>
    <string name="dot_hashFragment">  ·  </string>
    <string name="alarmHeaderName_activity">알림</string>
    <string name="writeHeaderSave">저장</string>
    <string name="hashHeaderSearch_activity">검색어를 입력하세요.</string>
</resources>
