<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context=".Fragment.Profile.Tab.Content">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/image_profileContentFragment"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image_profilecontentfragment"
        android:src="@drawable/baseline_create_white_48dp" />

    <TextView
        android:id="@+id/content1_profileContentFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/content1_profileContentFragment"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/content2_profileContentFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/content2_profileContentFragment"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/content3_profileContentFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/content3_profileContentFragment"
        android:textSize="16sp" />

</LinearLayout>