<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.Profile">

    <FrameLayout
        android:id="@+id/profile_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/activity_main_profile_id_background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#61AF75"
            android:contentDescription="@string/backgroundimage"
            android:scaleType="fitXY" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profile_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:background="#FF8D8D"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="66dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activity_main_profile_id_header_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/headerContent_profileFragment"
                    android:textColor="#B3FFFFFF"
                    android:textSize="24sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/activity_main_profile_id_header_counter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/headerCounter_profileFragment"
                    android:textColor="#B3FFFFFF"
                    android:textSize="16sp"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/activity_main_profile_id_header_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/headerLikeButton_profileFragment" />

                <Button
                    android:id="@+id/activity_main_profile_id_header_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/headerStatus_profileFragment" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_main_profile_id_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:orientation="vertical">

            <android.support.design.widget.TabLayout
                android:id="@+id/activity_main_profile_id_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF">

                <android.support.design.widget.TabItem
                    android:id="@+id/activity_main_profile_id_tab_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tabMyContent_profileFragment" />

                <android.support.design.widget.TabItem
                    android:id="@+id/activity_main_profile_id_tab_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tebMyTag_profileFragment" />

                <android.support.design.widget.TabItem
                    android:id="@+id/activity_main_profile_id_tab_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tebMyComment_profileFragment" />

                <android.support.design.widget.TabItem
                    android:id="@+id/activity_main_profile_id_tab_bookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tebMyBookmark_profileFragment" />

            </android.support.design.widget.TabLayout>

            <FrameLayout
                android:id="@+id/activity_main_profile_id_tab_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>