<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <FrameLayout
        android:id="@+id/backGround_mainFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backGroundImage_mainFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/backgroundimage"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_launcher_background" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/backGroundOpacity_mainFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header_mainFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/headerMenuButton_mainFragment"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/baseline_menu_white_36dp"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="98"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/headerName_mainFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/eround"
                    android:textColor="#B3FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible" />
            </LinearLayout>

            <Button
                android:id="@+id/headerMoreButton_mainFragment"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/baseline_more_verti_white_36dp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/content_mainFragment"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/contentAttachment_mainFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/contentattachment"
                    android:src="@drawable/baseline_gps_fixed_white_36dp" />

                <TextView
                    android:id="@+id/contentText_mainFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/contextText"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <Button
                android:id="@+id/contentMore_mainFragment"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:background="@drawable/baseline_more_horiz_white_36dp" />

            <View
                android:layout_width="380dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="#33FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/location_mainFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="6dp"
                    android:drawableStart="@drawable/place_resize"
                    android:text="@string/commentLocaionText"
                    android:textColor="#B3FFFFFF" />

                <ImageView
                    android:id="@+id/dot_mainFragment"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/dotimage"
                    app:srcCompat="@drawable/baseline_adjust_white_36dp2" />

                <TextView
                    android:id="@+id/time_mainFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="6dp"
                    android:text="@string/commentTimeText"
                    android:textColor="#B3FFFFFF" />

                <TextView
                    android:id="@+id/emotion_mainFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="6dp"
                    android:drawableStart="@drawable/faces_resize"
                    android:text="@string/commentEmotionText"
                    android:textColor="#B3FFFFFF" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/favorite_mainFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="6dp"
                    android:drawableStart="@drawable/favorite_resize"
                    android:text="@string/favoriteNum"
                    android:textColor="#B3FFFFFF" />

                <TextView
                    android:id="@+id/comment_mainFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="6dp"
                    android:drawableStart="@drawable/chat_bubble"
                    android:text="@string/commentNum"
                    android:textColor="#B3FFFFFF" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>