<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66000000"
    android:orientation="vertical"
    tools:context=".HashFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/search_hashFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="hint" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E0E0E0"
        android:orientation="vertical"
        android:padding="10dp">

        <FrameLayout
            android:id="@+id/tag1_hashFragment"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/tag1BackGround_hashFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/tagBackGround_hashFragment"
                android:scaleType="centerCrop"
                android:tint="#99000000"
                app:srcCompat="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tag1Content1_hashFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tag1Content1_hashFragment"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tag1Content2_hashFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/tag1Content2_hashFragment"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=" · "
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/tag1Content3_hashFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/tag1Content3_hashFragment"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/tag2_hashFragment"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/tag2BackGround_hashFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/tagBackGround_hashFragment"
                android:scaleType="centerCrop"
                android:tint="#99000000"
                app:srcCompat="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tag2Content1_hashFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tag2Content1_hashFragment"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tag2Content2_hashFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/tag2Content2_hashFragment"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=" · "
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/tag2Content3_hashFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/tag2Content3_hashFragment"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/tag3_hashFragment"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/tag3BackGround_hashFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/tagBackGround_hashFragment"
                android:scaleType="centerCrop"
                android:tint="#99000000"
                app:srcCompat="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tag3Content1_hashFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tag3Content1_hashFragment"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tag3Content2_hashFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/tag3Content2_hashFragment"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=" · "
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/tag3Content3_hashFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/tag3Content3_hashFragment"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>